--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,3 +1,16 @@
 #myPicture {
   max-width: 20%;
 }
+
+#header {
+  display: inline-block;
+}
+
+#personalBackground {
+  width: 100%;
+}
+
+div.section {
+  float: left;
+  margin: 20px;
+}
